--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,22 @@
-.App {
-  text-align: center;
+body{
+    background-color: #fdfdfd;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.submit-button{
+    width: 20%;
+    padding: 10px;
+    margin-top: 20px;
+    border: none;
+    border-radius: 5px; 
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
+    background-color: rgb(203, 28, 66);
+    color: white;
+    font-weight: bold;
+    cursor: pointer;
+    transition: color 0.2s;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  .submit-button:hover{
+    background-color: rgb(203, 28, 66, 0.8); 
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
